Fixing dashed border buttons jumping

--- a/src/css/schedule.css
+++ b/src/css/schedule.css
@@ -26,6 +26,7 @@
 
   color: #aaa;
   text-decoration: none;
+  border-bottom: 1px dashed transparent;
 }
 
 .schedule__button:hover {
